# spidershield

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  corpus.txt  docker-compose.example.yml
datasets/: hdg.txt
src/: generator.rs  main.rs  markov.rs
src/routes/: tarpit.rs
src/static/: layout.css
src/template/: tarpit.jinja
