[package]
name = "spidershield"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
cbor4ii = { version = "1.0.0", features = ["serde", "serde1", "use_std"] }
markov-generator = "0.2.0"
minijinja = { version = "2.8.0", features = ["builtins"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
