[package]
name = "spidershield"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum_static = "1.7.1"
cbor4ii = { version = "1.0.0", features = ["serde", "serde1", "use_std"] }
dotenv = "0.15.0"
markov = { git = "https://github.com/sussycatgirl/markov-seedable.git", branch = "pull-request-add-seedable" }
minijinja = { version = "2.8.0", features = ["builtins"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rand_seeder = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
